--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Roostagram!",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt lint"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
