Add photo model

--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -2,5 +2,8 @@
   "extends": "../.jshintrc",
   "node": false,
   "browser": true,
-  "devel": true
+  "devel": true,
+  "globals": {
+    "Backbone": true
+  }
 }
