--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "devDependencies": {
     "express": "^4.8.6",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-stylus": "^0.19.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^0.6.2",
     "sqlite3": "^2.2.7"
