--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "backbone": "~1.1.2",
     "lodash": "~2.4.1",
     "requirejs": "~2.1.14",
-    "lodash-template-loader": "~0.1.6"
+    "lodash-template-loader": "~0.1.6",
+    "vintagejs": "~1.1.4"
   }
 }
