--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Roostagram!",
   "private": true,
   "scripts": {
-    "test": "grunt lint",
+    "test": "grunt test-unit",
     "install": "bower install"
   },
   "devDependencies": {
+    "chai": "^1.9.1",
     "express": "^4.8.6",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
@@ -16,6 +17,7 @@
     "grunt-contrib-stylus": "^0.19.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^0.6.2",
+    "grunt-mocha": "^0.4.11",
     "sqlite3": "^2.2.7"
   }
 }
