--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^0.6.2",
     "grunt-mocha": "^0.4.11",
-    "sqlite3": "^2.2.7"
+    "grunt-mocha-test": "^0.11.0",
+    "sqlite3": "^2.2.7",
+    "webdriver-sync": "^0.14.2"
   }
 }
