--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-stylus": "^0.19.0",
     "grunt-contrib-watch": "^0.6.1",
