Optimize scripts via requirejs for prod
Build all JS into a single file for deployment.

- Add and configure "requirejs" plugin/task
- Install almond via bower
- Tweak require config "map" option to allow building for prod

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "lodash": "~2.4.1",
     "requirejs": "~2.1.14",
     "lodash-template-loader": "~0.1.6",
-    "vintagejs": "~1.1.4"
+    "vintagejs": "~1.1.4",
+    "almond": "~0.3.0"
   }
 }
