--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-stylus": "^0.19.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^0.6.2",
